# reconhecimento-facial

./: .dockerignore  .env.api.example  .env.example  .env.vision.example  .gitignore  Dockerfile  Dockerfile.vision  README.md  compose.yaml  pyproject.toml  requirements-build.txt  requirements-dev.txt  requirements-vision.txt  requirements.txt
.github/workflows/: ci.yml
app/: __init__.py  alerts.py  auth_ad.py  config.py  database.py  main.py  models.py  reports.py  risk_engine.py
app/static/: dashboard.css  dashboard.js  login.css  login.js  users.css
app/templates/: dashboard.html  login.html  users.html
app/vision/: __init__.py  camera.py  directory_sync.py  entry_tracker.py  evidence.py  face_tracking.py  gallery.py  identity.py  learned.py  outbox.py  pipeline.py  recognizer.py  worker.py
config/: access-context.example.json  camera-calibration.example.json  camera-calibration.piloto.json
docs/: integracao-vipc-1230-g2.md  plano-implantacao-ambiente-intelbras.md  v2.0-piloto.md
scripts/: capture_calibration_frame.py  download_vision_models.py  evaluate_vision_dataset.py  import_incontrol_gallery.py  manage_learned_gallery.py  manage_vision_outbox.py  prepare_vision_models.py  probe_intelbras_camera.py  provision_access_context.py  run_vision_worker.py  send_demo_events.py  sync_gallery_people.py  verify_vision_models.py
tests/: conftest.py  test_access_events.py  test_alert_outbox.py  test_arcface_engine.py  test_camera_probe.py  test_database_migrations.py  test_deployment_contract.py  test_directory_sync.py  test_entry_tracker.py  test_evaluate_vision_dataset.py  test_evidence_endpoint.py  test_evidence_store.py  test_face_tracking.py  test_gallery_import.py  test_learned_gallery.py  test_manage_learned_gallery_cli.py  test_manage_vision_outbox_cli.py  test_provision_access_context.py  test_recognizer_decision.py  test_reports_and_metrics.py  test_security_hardening.py  test_sqlite_resource_cleanup.py  test_vision_model_bundle.py  test_vision_outbox.py  test_vision_pipeline.py  test_vision_worker.py  test_visual_entry_contract.py
