[build-system]
requires = ["setuptools>=75"]
build-backend = "setuptools.build_meta"

[project]
name = "rag-audit"
version = "0.1.0"
description = "Auditoria contextual e alertas para acessos a salas críticas"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115,<1.0",
    "httpx>=0.28,<1.0",
    "jinja2>=3.1,<4.0",
    "pydantic>=2.10,<3.0",
    "python-dotenv>=1.0,<2.0",
    "reportlab>=4.2,<5.0",
    "tzdata>=2025.2",
    "uvicorn[standard]>=0.34,<1.0",
]

[project.optional-dependencies]
dev = [
    "httpx2>=2.6,<3.0",
    "pypdf>=5.0,<7.0",
    "pytest>=8.3,<10.0",
]
vision = [
    "numpy>=2.0,<3.0",
    "opencv-python-headless==4.13.0.92",
]

[tool.setuptools.packages.find]
include = ["app*"]

[tool.setuptools.package-data]
app = ["templates/*.html", "static/*.css", "static/*.js"]

[tool.pytest.ini_options]
addopts = "-q"
pythonpath = ["."]
testpaths = ["tests"]
