[build-system]
requires = ["setuptools==76.1.0", "wheel==0.45.1"]
build-backend = "setuptools.build_meta"

[project]
name = "rag-audit"
version = "0.1.0"
description = "Auditoria contextual e alertas para acessos a salas críticas"
readme = "README.md"
requires-python = ">=3.11,<3.13"
dependencies = [
    "fastapi==0.115.14",
    "httpx==0.28.1",
    "jinja2==3.1.6",
    "pydantic==2.10.6",
    "python-dotenv==1.0.1",
    "reportlab==4.4.10",
    "tzdata==2026.2",
    "uvicorn==0.34.3",
]

[project.optional-dependencies]
dev = [
    "numpy==1.26.4",
    "pypdf==6.14.2",
    "pytest==9.1.1",
    "ruff==0.15.21",
]
vision = [
    "insightface==0.7.3",
    "numpy==1.26.4",
    "onnxruntime==1.20.1",
    "opencv-python-headless==4.11.0.86",
]

[tool.setuptools.packages.find]
include = ["app*"]

[tool.setuptools.package-data]
app = ["templates/*.html", "static/*.css", "static/*.js"]

[tool.pytest.ini_options]
addopts = "-q"
pythonpath = ["."]
testpaths = ["tests"]

[tool.ruff]
target-version = "py311"
line-length = 100
extend-exclude = ["data"]

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F"]
